--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,33 +1,24 @@
-name: barbermanager
-description: A new Flutter project.
+name: barbershop_app
+description: Uma nova aplicação Flutter.
+
+publish_to: 'none' # Remova esta linha se publicar o app na pub.dev
 
 version: 1.0.0+1
 
 environment:
-  sdk: ">=3.0.0 <4.0.0"
+  sdk: ">=2.19.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  material_design_icons_flutter: ^5.0.0  # Adicione esta linha
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.2
 
 flutter:
   uses-material-design: true
-  # assets:
-  #  - images/a_dot_burr.jpeg
-  #  - images/a_dot_ham.jpeg
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+
+  assets:
+    - assets/imagem.jpeg  # Adicione o caminho correto da sua imagem de fundo aqui
