--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,10 +23,6 @@ flutter:
   uses-material-design: true
 
   assets:
-    - assets/imgfundo.png
-    - assets/adomicilio.png
-    - assets/degrade.png
-    - assets/sobrancelha.png
-    - assets/barba.png
+     - assets/
 
 
