Criação da página barberselectionPage

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,5 +29,10 @@ flutter:
     - assets/sobrancelha.png
     - assets/barba.png
     - assets/logo.png
+    - assets/barber1.png
+    - assets/barber2.png
+    - assets/barber3.png
+    - assets/barber4.png
+    - assets/barber5.png
 
 
