--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
   shimmer: ^2.0.0    
-  material_design_icons_flutter: ^5.0.0  # Adicione esta linha
+  material_design_icons_flutter: ^5.0.0  
 
 
 dev_dependencies:
